# ArafatAI

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CHROME_SIDEBAR_BRIDGE.md  FLUID_CORE_LAYER_STATUS.md  FLUID_ENGINEERING_UPGRADE_PLAN.md  LOCAL_SETUP_WINDOWS.md  ROADMAP.md  TINY_GPT_LEARNING.md
examples/browser-actions/: add-listing-modal.json  fixture-modal.json
examples/tiny-gpt/: sample.txt
extensions/chrome-sidebar/: README.md  content.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
src/arafatai/: __init__.py  __main__.py  actions.py  cli.py
src/arafatai/agents/: __init__.py  browser.py  coding.py  memory.py  planner.py  qa.py  research.py
src/arafatai/brain/: __init__.py  llm_client.py
src/arafatai/bridge/: __init__.py  codex_cli.py  core_reasoner.py  local_planner.py  server.py  task_store.py
src/arafatai/evals/: README.md  scorecard.py
src/arafatai/learning/: __init__.py
src/arafatai/memory/: README.md  lesson_store.py
src/arafatai/self_improvement/: __init__.py  proposal.py
src/arafatai/tools/: __init__.py  browser_tool.py  git_tool.py  shell_tool.py  tool_result.py
tests/: test_actions.py  test_codex_bridge.py  test_imports.py  test_learning_tiny_gpt.py  test_local_planner.py  test_memory_and_evals.py  test_python_core_reasoner.py  test_self_improvement.py  test_task_store.py
tools/browser-agent-node/: README.md  package-lock.json  package.json
tools/browser-agent-node/fixtures/: click-test.html
tools/sidebar-bridge-node/: README.md  package.json  start-bridge.cmd
(+35 files in other folders)
