[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "arafatai"
version = "0.1.0"
description = "Python-first personal AI agent system with tools, memory, evals, and PR-gated self-improvement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
llm = [
  "torch>=2.3",
]

[project.scripts]
arafatai = "arafatai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
